--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,14 @@ body {
 }
 
 header {
-  background-color: #333;
-  color: white;
+  background-color: #f4f4f4;
+  color:rgb(234, 191, 191);
   text-align: center;
   padding: 20px 0;
 }
 
 nav a {
-  color: white;
+  color:rgb(234, 191, 191);
   text-decoration: none;
   margin: 0 10px;
 }
@@ -31,6 +31,6 @@ section {
 footer {
   text-align: center;
   padding: 10px;
-  background-color: #333;
+  background-color:#eaafaf ;
   color: white;
 }
